--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ header{
 	overflow: hidden;
 	width:98%;
 	margin:10px auto;
+	padding:10px 0 10px;
 }
 .logo{
 	width:18%;
@@ -17,7 +18,7 @@ header{
 }
 .menu ul{
 	overflow: hidden;
-	float:right;
+	float: right;
 }
 .menu ul li{
 	list-style:none;
@@ -36,15 +37,113 @@ header{
 }
 /*header end*/
 /*banner start*/
-.banner{
+.banner{}
+.wrapper{
+	background-image:url(../image/banner.bmp);
+	background-repeat:no-repeat;
+	background-size:cover;
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	overflow: hidden;
 	width:98%;
-	margin:0 auto;
+	margin:10px auto;
 }
-.banner img{
-	width: 100%;
+.content{
+	width: 22%;
+	margin-top:80px;
+	margin-bottom:180px;
+	padding:25px;
+	background-color:rgba(63,63,74,.5);
+}
+.content h2{
+	font-family:sans-serif;
+	font-weight:300;
+	font-size: 30px;
+	color:white;
+	line-height:40px;
+}
+.content p{
+	font-family:sans-serif;
+	color:white;
+	line-height:25px;
+}
+.content button{
+	font-family:sans-serif;
+	color:white;
+	background-color:#445F7C;
+	width:130px;
+	height:30px;
+	border:none;
+	border-radius:3px;
+	cursor: pointer;
+	transition: .2s;
+}
+.content button:hover{
+	background-color:white;
+	color:#3B302E;
 }
 /*banner end*/
 /*service start*/
+.service{
+	overflow: hidden;
+	width:80%;
+	margin:10px auto;
+	padding:60px 0 80px;
+}
+.single{
+	width:30%;
+	text-align:center;
+	float: left;
+	margin-right:5%;
+}
+.single:last-child{
+	margin-right:0;
+}
+.single h2{
+	font-family:sans-serif;
+	font-weight:300;
+	font-size: 20px;
+	color:#616D7F;
+	line-height:10px;
+}
+.single img{
+	width: 100%;
+}
+.single p{
+	font-family:sans-serif;
+	color:#616D7F;
+}
+.single button{
+	font-family:sans-serif;
+	color:white;
+	background-color:#445F7C;
+	width:80px;
+	height: 25px;
+	border:none;
+	border-radius:3px;
+	cursor:pointer;
+}
 /*service end*/
 /*footer start*/
+footer{
+	width: 40%;
+	margin:40px auto;
+	text-align:center;
+}
+footer p{
+	font-family:sans-serif;
+	font-size:12px;
+	color:#616D7F;
+}
+footer ul{
+	width: 30%;
+	margin:5px auto;
+	overflow: hidden;
+}
+footer ul li{
+	list-style:none;
+	float:left;
+	margin:5px;	
+}
+footer ul li img{}
 /*footer end*/
